Prevent table text from wrapping on x-small phones
Fixes DD 71427 310

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -708,7 +708,7 @@ $home-sidebar-width: 20.5%;
 
         @include max-screen($screen__m) {
             &:not(:nth-of-type(3)) {
-                width: 47%;
+                width: 45%;
             }
 
             &:nth-of-type(2) {
